# maio-

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
model_v02/: metrics.json  model.joblib
src/maio/: app.py  model_io.py  schemas.py  train.py
tests/: test_api.py
