[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maio-diabetes-service"
version = "0.1.0"
description = "Virtual Diabetes Clinic Triage ML service (v0.1 baseline)"
authors = [{ name = "Sunil" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "scikit-learn>=1.4.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "joblib>=1.3.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

